@@ -7,6 +7,8 @@
     <string id="30022">Single: Play selected video only</string>
     <string id="30023">Playlist: Start playlist at selected video</string>
 
+    <string id="30050">Play all</string>
+
     <string id="30100">Default sort order</string>
     <string id="30101">Default</string>
     <string id="30102">Title</string>
